--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <div class="nav">
       <div class="container">
         <div class="left">
-          <h1>Peter <span class="brand">Parker</span></h1>
+          <a href="/"
+            ><h1>Peter <span class="brand">Parker</span></h1></a
+          >
         </div>
         <div class="right">
-          <a href="/index.html">Home</a>
+          <a href="#hero">Home</a>
           <a href="#dream">Dream</a>
           <a href="#experience">Experience</a>
           <a href="#" class="button">Hire Me</a>
@@ -27,6 +29,7 @@
       </div>
     </div>
     <div id="hero">
+      <a href="#hero" class="top"><i class="fas fa-arrow-up"></i></a>
       <div class="container">
         <div class="left">
           <h1>Welcome to <br /><span>Peter Parker's</span> World!</h1>
@@ -105,7 +108,15 @@
     </div>
     <div class="footer">
       <div class="container">
-        made with <i class="fa fa-heart"></i> by samiul arafah dhrubo
+        <span>
+          made with <i class="fa fa-heart"></i> by samiul arafah dhrubo</span
+        >
+        <span class="social">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin-in"></i>
+          <i class="far fa-envelope-open"></i>
+        </span>
       </div>
     </div>
   </body>
