--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
       rel="stylesheet"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css"
     />
+    <link rel="shortcut icon" href="./images/my-bg.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
+    <!-- navbar start -->
     <div class="nav">
       <div class="container">
         <div class="left">
-          <a href="/"
+          <a href="/index.html"
             ><h1>Peter <span class="brand">Parker</span></h1></a
           >
         </div>
@@ -28,6 +30,9 @@
         </div>
       </div>
     </div>
+    <!-- navbar end -->
+
+    <!-- hero start -->
     <div id="hero">
       <a href="#hero" class="top"><i class="fas fa-arrow-up"></i></a>
       <div class="container">
@@ -48,6 +53,9 @@
         </div>
       </div>
     </div>
+     <!-- hero end -->
+
+    <!-- dream start -->
     <div id="dream">
       <div class="container">
         <div class="left">
@@ -66,13 +74,15 @@
         </div>
       </div>
     </div>
+     <!-- dream end -->
+
+    <!-- experience start -->
     <div id="experience">
       <div class="wrapper">
         <h1 class="heading">
           experience
           <hr />
         </h1>
-
         <div class="container">
           <div class="single">
             <h1>Full Stack Developer</h1>
@@ -106,6 +116,9 @@
         </div>
       </div>
     </div>
+     <!-- experience end -->
+
+    <!-- footer start -->
     <div class="footer">
       <div class="container">
         <span>
@@ -119,5 +132,6 @@
         </span>
       </div>
     </div>
+    <!-- footer end -->
   </body>
 </html>
