--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="nav">
       <div class="container">
         <div class="left">
-          <a href="/index.html"
+          <a href="/milestone1"
             ><h1>Peter <span class="brand">Parker</span></h1></a
           >
         </div>
